--- a/scss/_content-section.scss
+++ b/scss/_content-section.scss
@@ -528,6 +528,9 @@
       background: linear-gradient(123.69deg, rgba(40, 38, 36, 0.3) 0%, rgba(20, 22, 22, 0.3) 100.67%);
 
       padding: 26px 24px 22px;
+      @media(max-width:991px){
+        padding: 18px 16px;
+      }
       p {
         font-style: normal;
         font-weight: 500;
@@ -535,6 +538,7 @@
         font-size: 16px;
         margin-bottom: 12px;
         color: white;
+
       }
       .date {
         .icon {
