--- a/scss/_content-section.scss
+++ b/scss/_content-section.scss
@@ -419,7 +419,14 @@
     height: 96px;
     margin-right: 16px;
     margin-bottom: 18px;
+    @media(max-width: 991px){
+
+      width: 100%;
+      text-align: center;
+      margin-right: 0;
+    }
     img {
+      width: 96px;
       max-width: 100%;
     }
   }
@@ -427,6 +434,8 @@
     margin-right: auto;
     @media(max-width: 991px) {
       margin-bottom: 14px;
+      text-align: center;
+      width: 100%;
     }
     p {
       font-family: Ubuntu;
@@ -448,7 +457,7 @@
       margin-bottom: 8px;
     }
     &.mr-32 {
-      margin-right: 32px;
+        margin-right: 28px;
     }
     .num {
       font-weight: bold;
