--- a/scss/_content-section.scss
+++ b/scss/_content-section.scss
@@ -134,12 +134,43 @@
       height: 60px;
       margin-right: 16px;
       border-radius: 100%;
+      position: relative;
       &:hover {
         border: 2px solid $orange;
       }
       @media(max-width: 991px) {
         display: none;
       }
+      .floating-info{
+        display: none;
+        position: absolute;
+        top: 0;
+        transform: translateX(-27%) translateY(-115%);
+        background: rgba(37, 37, 37, 0.9);
+        border-radius: 4px;
+        padding: 6px 12px;
+        width: auto;
+        .name{
+          font-weight: bold;
+          line-height: normal;
+          font-size: 15px;
+          text-align: center;
+          color: white;
+          margin-bottom: 0;
+          white-space: nowrap;
+        }
+        .teachs{
+          margin-bottom: 0;
+          font-weight: normal;
+          line-height: normal;
+          font-size: 12px;
+          text-align: center;
+          color: #FFFFFF;
+          opacity: 0.6;
+          white-space: nowrap;
+        }
+      }
+
     }
     .master-group-item__mobileImg {
       width: 60px;
