--- a/scss/_content-section.scss
+++ b/scss/_content-section.scss
@@ -1233,3 +1233,72 @@
     }
   }
 }
+
+.teacher-info-change-container{
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 8px;
+  .change-avatar-block{
+    width: 96px;
+    height: 96px;
+    margin-right: 16px;
+    margin-bottom: 26px;
+    border-radius: 100%;
+    position: relative;
+    cursor: pointer;
+    img{
+      max-width: 100%;
+    }
+    .overlay{
+      border-radius: 100%;
+      opacity: 0;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      display: flex;
+      transition: all .2s;
+      background-color: rgba(241, 145, 55, 0.8);
+      svg{
+        margin: auto;
+      }
+    }
+    &:hover{
+      .overlay{
+        opacity: 1;
+      }
+    }
+
+  }
+  .form-container{
+    margin-bottom: 8px;
+  }
+  input{
+    padding-top: 10px;
+    padding-bottom: 11px;
+  }
+  .fio-block{
+    width: 264px;
+    margin-right: auto;
+  }
+  .stats-block{
+    input{
+      max-width: 56px;
+    }
+    .form-container{
+      display: flex;
+      align-items: center;
+    }
+    label{
+      margin-left: 10px;
+      font-style: normal;
+      font-weight: normal;
+      line-height: normal;
+      font-size: 12px;
+      max-width: 82px;
+      color: rgba(37, 37, 37, 0.5);
+    }
+  }
+
+}
