--- a/css/build.css
+++ b/css/build.css
@@ -1229,6 +1229,124 @@ header {
     max-width: 82px;
     color: rgba(37, 37, 37, 0.5); }
 
+.teacher-master-group .title-container {
+  display: flex;
+  flex-wrap: wrap; }
+  .teacher-master-group .title-container h1 {
+    margin-bottom: 12px; }
+    @media (max-width: 991px) {
+      .teacher-master-group .title-container h1 {
+        width: 100%; } }
+  .teacher-master-group .title-container button {
+    margin-left: auto;
+    padding: 15px 28px;
+    margin-bottom: 14px; }
+  .teacher-master-group .title-container .select2 {
+    margin-bottom: 22px; }
+.teacher-master-group .master-group-item {
+  display: flex;
+  flex-wrap: wrap;
+  background: rgba(52, 26, 17, 0.04);
+  border-radius: 6px;
+  padding: 20px 24px 14px;
+  transition: all .2s;
+  margin-bottom: 18px;
+  cursor: pointer; }
+  .teacher-master-group .master-group-item.checked {
+    background-color: rgba(52, 26, 17, 0.12); }
+  @media (max-width: 991px) {
+    .teacher-master-group .master-group-item {
+      align-items: center; } }
+  .teacher-master-group .master-group-item:hover {
+    background-color: rgba(52, 26, 17, 0.12); }
+  .teacher-master-group .master-group-item .master-group-item__text {
+    margin-right: auto; }
+    @media (min-width: 992px) {
+      .teacher-master-group .master-group-item .master-group-item__text {
+        width: 497px; } }
+    @media (max-width: 991px) {
+      .teacher-master-group .master-group-item .master-group-item__text {
+        margin-bottom: 21px; } }
+    .teacher-master-group .master-group-item .master-group-item__text p {
+      font-style: normal;
+      font-weight: normal;
+      line-height: 17px;
+      font-size: 14px;
+      margin-bottom: 0; }
+      .teacher-master-group .master-group-item .master-group-item__text p .secondary {
+        color: #252525;
+        opacity: 0.5; }
+        .teacher-master-group .master-group-item .master-group-item__text p .secondary svg {
+          margin-right: 8px; }
+      .teacher-master-group .master-group-item .master-group-item__text p .date-val {
+        margin-right: 12px; }
+      .teacher-master-group .master-group-item .master-group-item__text p .time-val {
+        margin-right: 4px; }
+      .teacher-master-group .master-group-item .master-group-item__text p .payed {
+        margin-left: 10px;
+        line-height: 17px;
+        font-size: 14px;
+        padding-left: 6px;
+        padding-right: 6px;
+        height: 18px;
+        padding-bottom: 2px;
+        background: #F19137;
+        border-radius: 3px;
+        color: white; }
+  .teacher-master-group .master-group-item .master-group-item__answers button {
+    padding: 15px 28px;
+    margin-bottom: 17px; }
+  .teacher-master-group .master-group-item .master-group-item__description p {
+    line-height: 20px;
+    font-size: 14px;
+    margin-bottom: 16px;
+    color: #252525; }
+  .teacher-master-group .master-group-item .master-group-item__share a {
+    font-size: 14px;
+    color: #252525; }
+    .teacher-master-group .master-group-item .master-group-item__share a:hover svg path {
+      fill: #F19137; }
+  .teacher-master-group .master-group-item .master-group-item__share svg {
+    margin-right: 12px; }
+  .teacher-master-group .master-group-item .splitter {
+    margin-top: 18px;
+    margin-bottom: 16px;
+    width: calc(100% + 48px);
+    height: 1px;
+    margin-left: -24px;
+    margin-right: -24px;
+    background-image: linear-gradient(to right, rgba(37, 37, 37, 0.4) 10%, rgba(255, 255, 255, 0) 0%);
+    background-position: bottom;
+    background-size: 12px 1px;
+    background-repeat: repeat-x; }
+  .teacher-master-group .master-group-item .extra-container {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%; }
+    .teacher-master-group .master-group-item .extra-container p {
+      margin-bottom: 0;
+      font-family: Ubuntu;
+      font-style: normal;
+      font-weight: normal;
+      line-height: normal;
+      font-size: 13px;
+      margin-right: 24px; }
+      @media (max-width: 991px) {
+        .teacher-master-group .master-group-item .extra-container p {
+          width: 100%;
+          margin-bottom: 16px; }
+          .teacher-master-group .master-group-item .extra-container p:last-of-type {
+            margin-bottom: 0; } }
+      .teacher-master-group .master-group-item .extra-container p .label-gray {
+        margin-left: 6px;
+        color: #252525; }
+    @media (max-width: 991px) {
+      .teacher-master-group .master-group-item .extra-container .button {
+        margin-top: 14px; } }
+    .teacher-master-group .master-group-item .extra-container .btn-icon svg {
+      margin-right: 0; }
+
 .select2-container .select2-selection--single .select2-selection__rendered {
   font-size: 16px;
   color: #1a1a1a;
@@ -1426,6 +1544,8 @@ header {
       padding-left: 10px;
       font-size: 14px;
       color: #252525; }
+      .left-menu-container .sub-menu li a.active {
+        background: rgba(52, 26, 17, 0.06); }
   .left-menu-container .link-w-icon {
     padding-bottom: 8px;
     padding-top: 8px;
