--- a/scss/_content-section.scss
+++ b/scss/_content-section.scss
@@ -1300,5 +1300,167 @@
       color: rgba(37, 37, 37, 0.5);
     }
   }
+}
+
+.teacher-master-group{
+  .title-container{
+    display: flex;
+    flex-wrap: wrap;
+    h1{
+      margin-bottom: 12px;
+      @media(max-width:991px){
+        width: 100%;
+      }
+    }
+    button{
+      margin-left: auto;
+      padding: 15px 28px;
+      margin-bottom: 14px;
+    }
+    .select2{
+      margin-bottom: 22px;
+    }
+  }
+
+  .master-group-item {
+    display: flex;
+    flex-wrap: wrap;
+    background: rgba(52, 26, 17, .04);
+    border-radius: 6px;
+    padding: 20px 24px 14px;
+    transition: all .2s;
+    margin-bottom: 18px;
+    cursor: pointer;
+    &.checked {
+      background-color: rgba(52, 26, 17, 0.12);
+    }
+    @media(max-width: 991px) {
+      align-items: center;
+    }
+    &:hover {
+      background-color: rgba(52, 26, 17, 0.12);
+    }
+    .master-group-item__text {
+      margin-right: auto;
+      @media(min-width: 992px) {
+        width: 497px;
+      }
+      @media(max-width: 991px) {
+        margin-bottom: 21px;
+      }
+      p {
+        font-style: normal;
+        font-weight: normal;
+        line-height: 17px;
+        font-size: 14px;
+        margin-bottom: 0;
+        .secondary {
+          color: #252525;
+          opacity: 0.5;
+          svg {
+            margin-right: 8px;
+          }
+        }
+        .date-val{
+          margin-right: 12px ;
+        }
+        .time-val{
+          margin-right: 4px;
+        }
+        .payed {
+          margin-left: 10px;
+          line-height: 17px;
+          font-size: 14px;
+          padding-left: 6px;
+          padding-right: 6px;
+          height: 18px;
+          padding-bottom: 2px;
+          background: $orange;
+          border-radius: 3px;
+          color: white;
+        }
+      }
+    }
+    .master-group-item__answers {
+      button{
+        padding: 15px 28px;
+        margin-bottom: 17px;
+      }
+    }
+    .master-group-item__description{
+      p{
+        line-height: 20px;
+        font-size: 14px;
+        margin-bottom: 16px;
+        color: $black;
+      }
+    }
+    .master-group-item__share{
+      a{
+
+        font-size: 14px;
+        color: $black;
+        &:hover{
+          svg{
+            path{
+              fill:$orange
+            }
+          }
+        }
+      }
+      svg{
+        margin-right: 12px;
+      }
+
+    }
+    .splitter {
+      margin-top: 18px;
+      margin-bottom: 16px;
+      width: calc(100% + 48px);
+      height: 1px;
+      margin-left: -24px;
+      margin-right: -24px;
+      background-image: linear-gradient(to right, rgba(37, 37, 37, 0.4) 10%, rgba(255, 255, 255, 0) 0%);
+      background-position: bottom;
+      background-size: 12px 1px;
+      background-repeat: repeat-x;
+    }
+    .extra-container {
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      width: 100%;
+      p {
+        margin-bottom: 0;
+        font-family: Ubuntu;
+        font-style: normal;
+        font-weight: normal;
+        line-height: normal;
+        font-size: 13px;
+        margin-right: 24px;
+        @media(max-width: 991px) {
+          width: 100%;
+          margin-bottom: 16px;
+          &:last-of-type {
+            margin-bottom: 0;
+          }
+        }
+        .label-gray {
+          margin-left: 6px;
+          color: $black;
+        }
+      }
+      .button{
+        @media(max-width:991px){
+          margin-top: 14px;
+        }
+      }
+      .btn-icon{
+        svg {
+          margin-right: 0;
+        }
+      }
+    }
+  }
 
 }
