--- a/scss/_left-menu.scss
+++ b/scss/_left-menu.scss
@@ -41,6 +41,9 @@
         padding-left: 10px;
         font-size: 14px;
         color: $black;
+        &.active{
+          background: rgba(52, 26, 17, .06);
+        }
       }
     }
   }
