--- a/css/build.css
+++ b/css/build.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   font-family: 'Ubuntu',sans-serif;
   background: #F4F4F4; }
@@ -406,33 +407,34 @@ header {
       background-position: bottom;
       background-size: 12px 1px;
       background-repeat: repeat-x; }
-    .masters-groups .master-group-item .extra-container {
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      width: 100%; }
-      .masters-groups .master-group-item .extra-container p {
-        margin-bottom: 0;
-        font-family: Ubuntu;
-        font-style: normal;
-        font-weight: normal;
-        line-height: normal;
-        font-size: 13px;
-        margin-right: 24px; }
-        @media (max-width: 991px) {
-          .masters-groups .master-group-item .extra-container p {
-            width: 100%;
-            margin-bottom: 16px; }
-            .masters-groups .master-group-item .extra-container p:last-of-type {
-              margin-bottom: 0; } }
-        .masters-groups .master-group-item .extra-container p .label-gray {
-          margin-left: 6px;
-          color: #252525; }
-      @media (max-width: 991px) {
-        .masters-groups .master-group-item .extra-container .button {
-          margin-top: 14px; } }
-      .masters-groups .master-group-item .extra-container .btn-icon svg {
-        margin-right: 0; }
+
+.extra-container {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%; }
+  .extra-container p {
+    margin-bottom: 0;
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 13px;
+    margin-right: 24px; }
+    @media (max-width: 991px) {
+      .extra-container p {
+        width: 100%;
+        margin-bottom: 16px; }
+        .extra-container p:last-of-type {
+          margin-bottom: 0; } }
+    .extra-container p .label-gray {
+      margin-left: 6px;
+      color: #252525; }
+  @media (max-width: 991px) {
+    .extra-container .button {
+      margin-top: 14px; } }
+  .extra-container .btn-icon svg {
+    margin-right: 0; }
 
 .homeworks .title-section {
   display: flex;
@@ -1346,6 +1348,50 @@ header {
         margin-top: 14px; } }
     .teacher-master-group .master-group-item .extra-container .btn-icon svg {
       margin-right: 0; }
+
+.students-container {
+  display: flex;
+  flex-wrap: wrap; }
+  .students-container .title-container {
+    margin-bottom: 22px; }
+  .students-container .students-row {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap; }
+    .students-container .students-row .student-item {
+      width: 100%;
+      background: rgba(52, 26, 17, 0.05);
+      border-radius: 6px;
+      padding: 20px 24px 14px;
+      margin-bottom: 18px; }
+      .students-container .students-row .student-item .splitter {
+        margin-top: 18px;
+        margin-bottom: 16px;
+        width: calc(100% + 48px);
+        height: 1px;
+        margin-left: -24px;
+        margin-right: -24px;
+        background-image: linear-gradient(to right, rgba(37, 37, 37, 0.4) 10%, rgba(255, 255, 255, 0) 0%);
+        background-position: bottom;
+        background-size: 12px 1px;
+        background-repeat: repeat-x; }
+      .students-container .students-row .student-item .courses {
+        display: flex; }
+        .students-container .students-row .student-item .courses p {
+          line-height: 20px;
+          font-size: 14px;
+          margin-bottom: 0px;
+          padding-right: 18px; }
+          .students-container .students-row .student-item .courses p:not(:last-of-type) {
+            position: relative; }
+            .students-container .students-row .student-item .courses p:not(:last-of-type):after {
+              position: absolute;
+              content: '•';
+              right: 6px;
+              top: 0;
+              bottom: 0;
+              margin: auto;
+              color: rgba(37, 37, 37, 0.3); }
 
 .select2-container .select2-selection--single .select2-selection__rendered {
   font-size: 16px;
