--- a/css/build.css
+++ b/css/build.css
@@ -1091,23 +1091,24 @@ header {
       line-height: 17px; }
       .homework-exercise .exercise-item .text-area .answer.file:last-of-type {
         margin-bottom: 0; }
-  .homework-exercise .exercise-item .attach-files {
-    margin-top: 16px; }
-    .homework-exercise .exercise-item .attach-files .btn-orange-outline {
-      border: 0;
-      padding: 8px 4px;
-      margin-bottom: 10px; }
-    .homework-exercise .exercise-item .attach-files .attach-files-list .item {
-      margin-bottom: 15px;
-      font-style: normal;
-      font-weight: normal;
-      line-height: normal;
-      font-size: 14px;
-      color: #252525; }
-      .homework-exercise .exercise-item .attach-files .attach-files-list .item:last-of-type {
-        margin-bottom: 0; }
   .homework-exercise .exercise-item .controls-row {
     margin-top: 24px; }
+
+.attach-files {
+  margin-top: 16px; }
+  .attach-files .btn-orange-outline {
+    border: 0;
+    padding: 8px 4px;
+    margin-bottom: 10px; }
+  .attach-files .attach-files-list .item {
+    margin-bottom: 15px;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 14px;
+    color: #252525; }
+    .attach-files .attach-files-list .item:last-of-type {
+      margin-bottom: 0; }
 
 .tip-container {
   position: relative; }
@@ -1365,7 +1366,6 @@ header {
       padding: 20px 24px 14px;
       margin-bottom: 18px; }
       .students-container .students-row .student-item .splitter {
-        margin-top: 18px;
         margin-bottom: 16px;
         width: calc(100% + 48px);
         height: 1px;
@@ -1375,23 +1375,128 @@ header {
         background-position: bottom;
         background-size: 12px 1px;
         background-repeat: repeat-x; }
-      .students-container .students-row .student-item .courses {
-        display: flex; }
-        .students-container .students-row .student-item .courses p {
-          line-height: 20px;
-          font-size: 14px;
-          margin-bottom: 0px;
-          padding-right: 18px; }
-          .students-container .students-row .student-item .courses p:not(:last-of-type) {
-            position: relative; }
-            .students-container .students-row .student-item .courses p:not(:last-of-type):after {
-              position: absolute;
-              content: '•';
-              right: 6px;
-              top: 0;
-              bottom: 0;
-              margin: auto;
-              color: rgba(37, 37, 37, 0.3); }
+
+.courses {
+  display: flex;
+  margin-bottom: 16px; }
+  .courses p {
+    line-height: 20px;
+    font-size: 14px;
+    margin-bottom: 0px;
+    padding-right: 18px; }
+    .courses p:not(:last-of-type) {
+      position: relative; }
+      .courses p:not(:last-of-type):after {
+        position: absolute;
+        content: '•';
+        right: 6px;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        color: rgba(37, 37, 37, 0.3); }
+
+.checking-homework {
+  display: flex;
+  flex-wrap: wrap; }
+  .checking-homework h1 {
+    width: 100%; }
+  .checking-homework .select2 {
+    margin-bottom: 24px; }
+  .checking-homework .checking-homework-item {
+    width: 100%;
+    background: rgba(52, 26, 17, 0.05);
+    border-radius: 6px;
+    padding: 20px 24px 14px;
+    margin-bottom: 18px; }
+    .checking-homework .checking-homework-item .splitter {
+      margin-top: 24px;
+      margin-bottom: 32px;
+      width: calc(100% + 48px);
+      height: 1px;
+      margin-left: -24px;
+      margin-right: -24px;
+      background-image: linear-gradient(to right, rgba(37, 37, 37, 0.4) 10%, rgba(255, 255, 255, 0) 0%);
+      background-position: bottom;
+      background-size: 12px 1px;
+      background-repeat: repeat-x; }
+    .checking-homework .checking-homework-item .title {
+      display: flex;
+      align-items: center;
+      margin-bottom: 8px; }
+      .checking-homework .checking-homework-item .title .tips-used {
+        margin-bottom: 0;
+        margin-left: auto;
+        color: rgba(37, 37, 37, 0.5);
+        font-weight: normal;
+        line-height: normal;
+        font-size: 13px; }
+        .checking-homework .checking-homework-item .title .tips-used .amount {
+          color: #252525;
+          margin-left: 4px; }
+    .checking-homework .checking-homework-item .text p {
+      color: #252525;
+      font-style: normal;
+      font-weight: normal;
+      line-height: 19px;
+      font-size: 14px;
+      margin-bottom: 16px; }
+    .checking-homework .checking-homework-item .attached-files p {
+      margin-bottom: 8px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+      font-size: 14px;
+      color: #252525; }
+    .checking-homework .checking-homework-item .attached-files .file-name {
+      font-weight: normal;
+      line-height: normal;
+      font-size: 14px;
+      margin-bottom: 8px;
+      color: #252525; }
+    .checking-homework .checking-homework-item .grad-container {
+      display: flex; }
+      @media (max-width: 991px) {
+        .checking-homework .checking-homework-item .grad-container:first-of-type {
+          flex-wrap: wrap; } }
+      .checking-homework .checking-homework-item .grad-container .form-container {
+        margin-bottom: 18px; }
+        .checking-homework .checking-homework-item .grad-container .form-container input {
+          padding-top: 12px;
+          padding-bottom: 11px;
+          padding-left: 12px;
+          font-size: 14px; }
+        @media (min-width: 992px) {
+          .checking-homework .checking-homework-item .grad-container .form-container:first-of-type {
+            max-width: 72px;
+            margin-right: 12px; } }
+    .checking-homework .checking-homework-item .hw-controls {
+      display: flex;
+      align-items: baseline; }
+      .checking-homework .checking-homework-item .hw-controls .finish-block {
+        margin-left: auto; }
+        .checking-homework .checking-homework-item .hw-controls .finish-block .status {
+          font-weight: 500;
+          line-height: normal;
+          font-size: 16px;
+          text-align: right;
+          color: #252525; }
+        .checking-homework .checking-homework-item .hw-controls .finish-block a {
+          margin-left: 18px;
+          font-style: normal;
+          font-weight: normal;
+          line-height: normal;
+          font-size: 13px;
+          text-align: right;
+          color: #F19137; }
+        .checking-homework .checking-homework-item .hw-controls .finish-block button {
+          padding: 14px 28px 15px; }
+          .checking-homework .checking-homework-item .hw-controls .finish-block button.btn-orange-outline {
+            padding-right: 0;
+            padding-left: 0;
+            margin-left: 24px; }
+            .checking-homework .checking-homework-item .hw-controls .finish-block button.btn-orange-outline:hover {
+              background-color: transparent;
+              color: #EB821F; }
 
 .select2-container .select2-selection--single .select2-selection__rendered {
   font-size: 16px;
