--- a/scss/_content-section.scss
+++ b/scss/_content-section.scss
@@ -141,7 +141,7 @@
       @media(max-width: 991px) {
         display: none;
       }
-      .floating-info{
+      .floating-info {
         display: none;
         position: absolute;
         top: 0;
@@ -150,7 +150,7 @@
         border-radius: 4px;
         padding: 6px 12px;
         width: auto;
-        .name{
+        .name {
           font-weight: bold;
           line-height: normal;
           font-size: 15px;
@@ -159,7 +159,7 @@
           margin-bottom: 0;
           white-space: nowrap;
         }
-        .teachs{
+        .teachs {
           margin-bottom: 0;
           font-weight: normal;
           line-height: normal;
@@ -225,7 +225,7 @@
       font-weight: bold;
       line-height: 14px;
       max-width: 68px;
-      &.plus{
+      &.plus {
         max-width: 86px;
 
       }
@@ -244,6 +244,7 @@
     }
   }
 }
+
 .extra-container {
   display: flex;
   align-items: center;
@@ -269,12 +270,12 @@
       color: $black;
     }
   }
-  .button{
-    @media(max-width:991px){
+  .button {
+    @media(max-width: 991px) {
       margin-top: 14px;
     }
   }
-  .btn-icon{
+  .btn-icon {
     svg {
       margin-right: 0;
     }
@@ -463,7 +464,7 @@
     height: 96px;
     margin-right: 16px;
     margin-bottom: 18px;
-    @media(max-width: 991px){
+    @media(max-width: 991px) {
 
       width: 100%;
       text-align: center;
@@ -501,7 +502,7 @@
       margin-bottom: 8px;
     }
     &.mr-32 {
-        margin-right: 28px;
+      margin-right: 28px;
     }
     .num {
       font-weight: bold;
@@ -581,7 +582,7 @@
       background: linear-gradient(123.69deg, rgba(40, 38, 36, 0.3) 0%, rgba(20, 22, 22, 0.3) 100.67%);
 
       padding: 26px 24px 22px;
-      @media(max-width:991px){
+      @media(max-width: 991px) {
         padding: 18px 16px;
       }
       p {
@@ -625,11 +626,11 @@
         padding-top: 7px;
         padding-bottom: 7px;
       }
-      .btn-container{
+      .btn-container {
         display: flex;
       }
-      .btn-icon{
-        svg{
+      .btn-icon {
+        svg {
           opacity: 1;
           margin-right: 0;
         }
@@ -814,7 +815,7 @@
         font-size: 14px;
         color: $black;
         margin-bottom: 0;
-        @media(max-width: 991px){
+        @media(max-width: 991px) {
           margin-bottom: 16px;
         }
       }
@@ -981,7 +982,7 @@
     margin-bottom: 41px;
     display: flex;
     flex-wrap: wrap;
-    .text-container{
+    .text-container {
       margin-right: auto;
       .date {
         .icon {
@@ -1007,20 +1008,20 @@
         }
       }
     }
-    .grad{
+    .grad {
       font-weight: 500;
       line-height: normal;
       font-size: 40px;
       text-align: right;
       color: $orange;
     }
-    .checking{
+    .checking {
       font-style: italic;
       font-weight: normal;
       line-height: normal;
       font-size: 14px;
       color: $secondaryBlack;
-      }
+    }
   }
 
   .exercise-item {
@@ -1064,11 +1065,11 @@
         font-size: 14px;
         margin-bottom: 8px;
         border-radius: 4px;
-        &.false{
+        &.false {
           background-color: #D62F2F;
-          color:white;
+          color: white;
         }
-        &.true{
+        &.true {
           color: white;
           background-color: $orange;
         }
@@ -1104,27 +1105,28 @@
         color: $black;
         margin-bottom: 0;
       }
-      .answer{
+      .answer {
         font-style: normal;
         font-weight: normal;
         line-height: 20px;
         font-size: 14px;
         margin-bottom: 16px;
-        &.file{
+        &.file {
           margin-bottom: 10px;
           line-height: 17px;
-          &:last-of-type{
+          &:last-of-type {
             margin-bottom: 0;
           }
         }
       }
 
     }
-    .controls-row{
+    .controls-row {
       margin-top: 24px;
     }
   }
 }
+
 .attach-files {
   margin-top: 16px;
   .btn-orange-outline {
@@ -1142,14 +1144,14 @@
       font-weight: normal;
       line-height: normal;
       font-size: 14px;
-      color:$black;
+      color: $black;
     }
   }
 }
 
-.tip-container{
+.tip-container {
   position: relative;
-  .tip-block{
+  .tip-block {
     display: none;
     position: absolute;
     top: 0;
@@ -1158,7 +1160,7 @@
     border-radius: 4px;
     padding: 28px 24px 18px;
     color: white;
-    .close-tip{
+    .close-tip {
       width: 12px;
       height: 12px;
       opacity: .3;
@@ -1166,21 +1168,21 @@
       right: 9px;
       top: 8px;
       line-height: 1;
-      img{
+      img {
         max-width: 100%;
       }
-      &:hover{
-        opacity:1
+      &:hover {
+        opacity: 1
       }
     }
 
-    .heading{
+    .heading {
       font-weight: 500;
       line-height: 22px;
       font-size: 16px;
       color: white;
       margin-bottom: 6px;
-      .total{
+      .total {
         opacity: .4;
         font-weight: normal;
         line-height: 18px;
@@ -1188,7 +1190,7 @@
         margin-left: 10px;
       }
     }
-    .tip-text{
+    .tip-text {
       margin-bottom: 14px;
       font-style: normal;
       font-weight: normal;
@@ -1196,50 +1198,50 @@
       font-size: 14px;
       color: white;
     }
-    .tip-tools{
+    .tip-tools {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      .dots{
+      .dots {
         display: flex;
         margin-left: auto;
-        .dot-item{
+        .dot-item {
           width: 8px;
           height: 8px;
           margin-right: 8px;
           background-color: white;
           opacity: .16;
           border-radius: 100%;
-          &:hover{
+          &:hover {
             opacity: .5;
           }
-          &.active{
+          &.active {
             opacity: 1;
             background: $orangeDeep;
           }
-          &:last-of-type{
+          &:last-of-type {
             margin-right: 0;
           }
         }
       }
     }
-    .add-tip{
+    .add-tip {
       font-weight: 500;
       line-height: 19px;
       font-size: 14px;
       color: $orange;
-      &:hover{
+      &:hover {
         color: white;
       }
     }
   }
 }
 
-.teacher-info-change-container{
+.teacher-info-change-container {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 8px;
-  .change-avatar-block{
+  .change-avatar-block {
     width: 96px;
     height: 96px;
     margin-right: 16px;
@@ -1247,10 +1249,10 @@
     border-radius: 100%;
     position: relative;
     cursor: pointer;
-    img{
+    img {
       max-width: 100%;
     }
-    .overlay{
+    .overlay {
       border-radius: 100%;
       opacity: 0;
       position: absolute;
@@ -1261,37 +1263,37 @@
       display: flex;
       transition: all .2s;
       background-color: rgba(241, 145, 55, 0.8);
-      svg{
+      svg {
         margin: auto;
       }
     }
-    &:hover{
-      .overlay{
+    &:hover {
+      .overlay {
         opacity: 1;
       }
     }
 
   }
-  .form-container{
+  .form-container {
     margin-bottom: 8px;
   }
-  input{
+  input {
     padding-top: 10px;
     padding-bottom: 11px;
   }
-  .fio-block{
+  .fio-block {
     width: 264px;
     margin-right: auto;
   }
-  .stats-block{
-    input{
+  .stats-block {
+    input {
       max-width: 56px;
     }
-    .form-container{
+    .form-container {
       display: flex;
       align-items: center;
     }
-    label{
+    label {
       margin-left: 10px;
       font-style: normal;
       font-weight: normal;
@@ -1303,22 +1305,22 @@
   }
 }
 
-.teacher-master-group{
-  .title-container{
+.teacher-master-group {
+  .title-container {
     display: flex;
     flex-wrap: wrap;
-    h1{
+    h1 {
       margin-bottom: 12px;
-      @media(max-width:991px){
+      @media(max-width: 991px) {
         width: 100%;
       }
     }
-    button{
+    button {
       margin-left: auto;
       padding: 15px 28px;
       margin-bottom: 14px;
     }
-    .select2{
+    .select2 {
       margin-bottom: 22px;
     }
   }
@@ -1362,10 +1364,10 @@
             margin-right: 8px;
           }
         }
-        .date-val{
-          margin-right: 12px ;
+        .date-val {
+          margin-right: 12px;
         }
-        .time-val{
+        .time-val {
           margin-right: 4px;
         }
         .payed {
@@ -1383,33 +1385,33 @@
       }
     }
     .master-group-item__answers {
-      button{
+      button {
         padding: 15px 28px;
         margin-bottom: 17px;
       }
     }
-    .master-group-item__description{
-      p{
+    .master-group-item__description {
+      p {
         line-height: 20px;
         font-size: 14px;
         margin-bottom: 16px;
         color: $black;
       }
     }
-    .master-group-item__share{
-      a{
+    .master-group-item__share {
+      a {
 
         font-size: 14px;
         color: $black;
-        &:hover{
-          svg{
-            path{
-              fill:$orange
+        &:hover {
+          svg {
+            path {
+              fill: $orange
             }
           }
         }
       }
-      svg{
+      svg {
         margin-right: 12px;
       }
 
@@ -1451,12 +1453,12 @@
           color: $black;
         }
       }
-      .button{
-        @media(max-width:991px){
+      .button {
+        @media(max-width: 991px) {
           margin-top: 14px;
         }
       }
-      .btn-icon{
+      .btn-icon {
         svg {
           margin-right: 0;
         }
@@ -1465,17 +1467,17 @@
   }
 }
 
-.students-container{
+.students-container {
   display: flex;
   flex-wrap: wrap;
-  .title-container{
+  .title-container {
     margin-bottom: 22px;
   }
-  .students-row{
+  .students-row {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    .student-item{
+    .student-item {
       width: 100%;
       background: rgba(52, 26, 17, 0.05);
       border-radius: 6px;
@@ -1495,17 +1497,18 @@
     }
   }
 }
-.courses{
+
+.courses {
   display: flex;
   margin-bottom: 16px;
-  p{
+  p {
     line-height: 20px;
     font-size: 14px;
     margin-bottom: 0px;
     padding-right: 18px;
-    &:not(:last-of-type){
+    &:not(:last-of-type) {
       position: relative;
-      &:after{
+      &:after {
         position: absolute;
         content: '•';
         right: 6px;
@@ -1518,16 +1521,16 @@
   }
 }
 
-.checking-homework{
+.checking-homework {
   display: flex;
   flex-wrap: wrap;
-  h1{
+  h1 {
     width: 100%;
   }
-  .select2{
+  .select2 {
     margin-bottom: 24px;
   }
-  .checking-homework-item{
+  .checking-homework-item {
     width: 100%;
     background: rgba(52, 26, 17, 0.05);
     border-radius: 6px;
@@ -1545,25 +1548,25 @@
       background-size: 12px 1px;
       background-repeat: repeat-x;
     }
-    .title{
+    .title {
       display: flex;
       align-items: center;
       margin-bottom: 8px;
-      .tips-used{
+      .tips-used {
         margin-bottom: 0;
         margin-left: auto;
         color: $secondaryBlack;
         font-weight: normal;
         line-height: normal;
         font-size: 13px;
-        .amount{
+        .amount {
           color: $black;
           margin-left: 4px;
         }
       }
     }
-    .text{
-      p{
+    .text {
+      p {
         color: $black;
         font-style: normal;
         font-weight: normal;
@@ -1572,8 +1575,8 @@
         margin-bottom: 16px;
       }
     }
-    .attached-files{
-      p{
+    .attached-files {
+      p {
         margin-bottom: 8px;
         font-style: normal;
         font-weight: 500;
@@ -1581,7 +1584,7 @@
         font-size: 14px;
         color: $black;
       }
-      .file-name{
+      .file-name {
         font-weight: normal;
         line-height: normal;
         font-size: 14px;
@@ -1589,43 +1592,43 @@
         color: $black;
       }
     }
-    .grad-container{
+    .grad-container {
       display: flex;
-      &:first-of-type{
-        @media(max-width: 991px){
+      &:first-of-type {
+        @media(max-width: 991px) {
           flex-wrap: wrap;
         }
       }
-      .form-container{
+      .form-container {
         margin-bottom: 18px;
-          input{
-            padding-top: 12px;
-            padding-bottom: 11px;
-            padding-left: 12px;
-            font-size: 14px;
+        input {
+          padding-top: 12px;
+          padding-bottom: 11px;
+          padding-left: 12px;
+          font-size: 14px;
 
-          }
-        &:first-of-type{
-          @media(min-width: 992px){
+        }
+        &:first-of-type {
+          @media(min-width: 992px) {
             max-width: 72px;
             margin-right: 12px;
           }
         }
       }
     }
-    .hw-controls{
+    .hw-controls {
       display: flex;
       align-items: baseline;
-      .finish-block{
+      .finish-block {
         margin-left: auto;
-        .status{
+        .status {
           font-weight: 500;
           line-height: normal;
           font-size: 16px;
           text-align: right;
           color: $black;
         }
-        a{
+        a {
           margin-left: 18px;
           font-style: normal;
           font-weight: normal;
@@ -1634,19 +1637,49 @@
           text-align: right;
           color: #F19137;
         }
-        button{
+        button {
           padding: 14px 28px 15px;
-          &.btn-orange-outline{
+          &.btn-orange-outline {
             padding-right: 0;
             padding-left: 0;
             margin-left: 24px;
-            &:hover{
+            &:hover {
               background-color: transparent;
               color: $orangeDeep;
             }
           }
         }
       }
+    }
+  }
+}
+
+.create-lesson {
+  h1 {
+    margin-bottom: 24px;
+  }
+  .form-container{
+    margin-bottom: 32px;
+    input{
+      padding-left: 12px;
+      padding-top: 11px;
+      padding-bottom: 12px;
+      font-size: 14px;
+      margin-bottom: 0;
+    }
+  }
+  .question-container{
+    .form-container{
+      margin-bottom: 24px;
+      &.tip{
+        &:last-of-type{
+          margin-bottom: 8px
+        }
+      }
+    }
+    .add-tip{
+      font-size: 14px;
+      padding: 8px 4px 7px;
     }
   }
 }
