--- a/scss/_content-section.scss
+++ b/scss/_content-section.scss
@@ -1249,8 +1249,11 @@
     border-radius: 100%;
     position: relative;
     cursor: pointer;
+    overflow: hidden;
     img {
       max-width: 100%;
+      height: 100%;
+      width: 100%;
     }
     .overlay {
       border-radius: 100%;
