--- a/css/build.css
+++ b/css/build.css
@@ -182,6 +182,21 @@ button {
     color: #E20000;
     font-size: 13px; }
 
+.mobile-menu .modal-dialog {
+  margin: 0;
+  height: 100vh;
+  width: 256px; }
+  .mobile-menu .modal-dialog .modal-content {
+    height: 100%;
+    border: 0;
+    border-radius: 0; }
+    .mobile-menu .modal-dialog .modal-content .close-modal {
+      margin-bottom: 10px;
+      padding-left: 22px;
+      padding-top: 18px; }
+      .mobile-menu .modal-dialog .modal-content .close-modal .btn-icon svg {
+        opacity: 1; }
+
 header {
   padding-top: 16px;
   padding-bottom: 16px;
