--- a/scss/build.scss
+++ b/scss/build.scss
@@ -2,6 +2,7 @@
 @import 'typography';
 @import 'buttons';
 @import 'forms';
+@import 'mobile-menu';
 @import 'header';
 @import 'content-section';
 @import 'select2';
