--- a/scss/_content-section.scss
+++ b/scss/_content-section.scss
@@ -4,7 +4,7 @@
     @media(min-width: 992px) {
       padding-top: 32px;
       padding-bottom: 32px;
-      max-height: calc(100vh - 80px);
+      //max-height: calc(100vh - 80px);
       overflow-y: scroll;
       overflow-x: visible;
     }
