fixed padding of left menu personal page margins fixes

--- a/scss/_content-section.scss
+++ b/scss/_content-section.scss
@@ -34,6 +34,7 @@
     margin-bottom: 40px;
   }
   p {
+    margin-top: 6px;
     font-style: normal;
     font-weight: normal;
     line-height: 19px;
