--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -8,9 +8,9 @@ h1 {
 
 h2 {
   font-style: normal;
-  font-weight: 500;
-  line-height: 25px;
-  font-size: 18px;
+  font-weight: bold;
+  line-height: 23px;
+  font-size: 20px;
   @media (max-width: 991px) {
     font-size: 22px;
     line-height: normal;
