--- a/css/build.css
+++ b/css/build.css
@@ -20,9 +20,9 @@ h1 {
 
 h2 {
   font-style: normal;
-  font-weight: 500;
-  line-height: 25px;
-  font-size: 18px; }
+  font-weight: bold;
+  line-height: 23px;
+  font-size: 20px; }
   @media (max-width: 991px) {
     h2 {
       font-size: 22px;
@@ -112,13 +112,13 @@ button {
   transition: all .2s;
   cursor: pointer; }
   .button.btn-lg {
-    padding: 15px 28px 14px; }
+    padding: 14px 28px 14px;
+    font-size: 16px; }
   .button.btn-orange {
-    border: 1px solid #F19137;
+    border: 0;
     color: white;
     background-color: #F19137; }
     .button.btn-orange:hover {
-      border-color: #EB821F;
       background-color: #EB821F; }
   .button.btn-orange-outline {
     color: #F19137;
@@ -142,14 +142,19 @@ button {
 .form-container {
   width: 100%;
   margin-bottom: 22px;
-  position: relative; }
+  position: relative;
+  height: 69px;
+  display: flex;
+  flex-wrap: wrap; }
   .form-container label {
+    height: 17px;
     line-height: 17px;
     font-size: 14px;
     color: #252525;
     margin-bottom: 4px;
     width: 100%; }
   .form-container input, .form-container textarea {
+    height: 48px;
     outline: none !important;
     line-height: 17px;
     font-size: 14px;
@@ -198,8 +203,8 @@ button {
         opacity: 1; }
 
 header {
-  padding-top: 16px;
-  padding-bottom: 16px;
+  padding-top: 12px;
+  padding-bottom: 12px;
   background-color: white;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.08); }
   @media (min-width: 992px) {
@@ -246,6 +251,7 @@ header {
     .controls-row {
       margin-bottom: 40px; } }
   .controls-row p {
+    margin-top: 6px;
     font-style: normal;
     font-weight: normal;
     line-height: 19px;
