--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -13,14 +13,14 @@ button {
   transition: all .2s;
   cursor: pointer;
   &.btn-lg{
-    padding: 15px 28px 14px;
+    padding: 14px 28px 14px;
+    font-size: 16px;
   }
   &.btn-orange{
-    border: 1px solid $orange;
+    border: 0;
     color: white;
     background-color: $orange;
     &:hover{
-      border-color: $orangeDeep;
       background-color: $orangeDeep;
     }
   }
