--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -2,7 +2,11 @@
   width: 100%;
   margin-bottom: 22px;
   position: relative;
+  height: 69px;
+  display: flex;
+  flex-wrap: wrap;
   label {
+    height: 17px;
     line-height: 17px;
     font-size: 14px;
     color: $black;
@@ -10,6 +14,7 @@
     width: 100%;
   }
   input, textarea {
+    height: 48px;
     outline: none !important;
     line-height: 17px;
     font-size: 14px;
