--- a/scss/_select2.scss
+++ b/scss/_select2.scss
@@ -1,7 +1,8 @@
 .select2-container .select2-selection--single .select2-selection__rendered {
   font-size: 16px;
   color: #1a1a1a;
-  padding: 10px 37px 10px 16px;
+  padding: 12px 40px 11px 14px;
+  line-height: 17px;
 }
 
 .select2:hover {
@@ -11,7 +12,7 @@
 }
 
 .select2-container--default .select2-selection--single {
-  height: 48px;
+  height: 40px;
 
   border: 1px solid rgba(0, 0, 0, 0.12);
   border-radius: 6px;
