--- a/scss/_switcher.scss
+++ b/scss/_switcher.scss
@@ -14,6 +14,9 @@
     margin-right: 10px;
     margin-left: 10px;
     margin-bottom: 0;
+    &:nth-of-type(2){
+      margin-right: 0;
+    }
     @media (max-width:991px) {
       &:first-of-type{
         margin-left: 0;
