--- a/scss/_content-section.scss
+++ b/scss/_content-section.scss
@@ -1747,6 +1747,11 @@
   h1 {
     margin-bottom: 24px;
   }
+  .lesson-description{
+    .form-container{
+      display: block;
+    }
+  }
   .form-container {
     margin-bottom: 32px;
     input {
