change pswd fixed

--- a/scss/build.scss
+++ b/scss/build.scss
@@ -3,6 +3,7 @@
 @import 'buttons';
 @import 'forms';
 @import 'mobile-menu';
+@import 'modal';
 @import 'header';
 @import 'content-section';
 @import 'select2';
