--- a/css/build.css
+++ b/css/build.css
@@ -145,7 +145,6 @@ button {
   width: 100%;
   margin-bottom: 22px;
   position: relative;
-  height: 69px;
   display: flex;
   flex-wrap: wrap; }
   .form-container label {
@@ -155,6 +154,19 @@ button {
     color: #252525;
     margin-bottom: 4px;
     width: 100%; }
+  .form-container .delete {
+    position: absolute;
+    right: 0;
+    top: 0;
+    line-height: 17px;
+    font-size: 14px;
+    color: #252525;
+    font-weight: 300;
+    opacity: 0.4;
+    cursor: pointer;
+    transition: all .2s; }
+    .form-container .delete:hover {
+      opacity: .6; }
   .form-container input, .form-container textarea {
     height: 48px;
     outline: none !important;
@@ -189,6 +201,50 @@ button {
     color: #E20000;
     font-size: 13px; }
 
+.custom-radio {
+  margin-bottom: 12px; }
+  .custom-radio input {
+    display: none; }
+    .custom-radio input + label {
+      padding-left: 22px;
+      position: relative; }
+      .custom-radio input + label:before {
+        content: '';
+        position: absolute;
+        border: 2px solid #252525;
+        opacity: .3;
+        box-sizing: border-box;
+        width: 16px;
+        height: 16px;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        border-radius: 100%;
+        transition: all .2s; }
+      .custom-radio input + label:after {
+        position: absolute;
+        content: '';
+        width: 6px;
+        height: 6px;
+        background-color: #F19137;
+        opacity: 0;
+        left: 5px;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        border-radius: 100%;
+        transition: all .2s; }
+    .custom-radio input:checked + label:before {
+      border-color: #F19137;
+      opacity: 1; }
+    .custom-radio input:checked + label:after {
+      opacity: 1; }
+  .custom-radio label {
+    line-height: 17px;
+    font-size: 14px;
+    margin-bottom: 0; }
+
 .mobile-menu .modal-dialog {
   margin: 0;
   height: 100vh;
@@ -203,6 +259,18 @@ button {
       padding-top: 18px; }
       .mobile-menu .modal-dialog .modal-content .close-modal .btn-icon svg {
         opacity: 1; }
+
+.modal .modal-dialog {
+  width: 424px; }
+.modal__heading {
+  font-style: normal;
+  font-weight: 500;
+  line-height: 25px;
+  font-size: 18px;
+  color: #252525;
+  margin-bottom: 16px; }
+.modal .btn-orange {
+  margin-top: 16px; }
 
 header {
   padding-top: 12px;
@@ -1604,13 +1672,25 @@ header {
     padding-bottom: 12px;
     font-size: 14px;
     margin-bottom: 0; }
-.create-lesson .question-container .form-container {
-  margin-bottom: 24px; }
-  .create-lesson .question-container .form-container.tip:last-of-type {
-    margin-bottom: 8px; }
-.create-lesson .question-container .add-tip {
-  font-size: 14px;
-  padding: 8px 4px 7px; }
+
+.question-container {
+  border-top: 1px dotted rgba(37, 37, 37, 0.4);
+  padding-top: 24px; }
+  @media (min-width: 991px) {
+    .question-container {
+      margin-left: -32px;
+      margin-right: -32px;
+      padding-right: 32px;
+      padding-left: 32px; } }
+  .question-container:last-of-type {
+    border-bottom: 1px dotted rgba(37, 37, 37, 0.4); }
+  .question-container .form-container {
+    margin-bottom: 24px; }
+    .question-container .form-container.tip:last-of-type {
+      margin-bottom: 8px; }
+  .question-container .add-tip {
+    font-size: 14px;
+    padding: 8px 4px 7px; }
 
 .select2-container .select2-selection--single .select2-selection__rendered {
   font-size: 16px;
