--- a/scss/_content-section.scss
+++ b/scss/_content-section.scss
@@ -26,7 +26,7 @@
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 20px;
-  @media(max-width:991px){
+  @media(max-width: 991px) {
     margin-bottom: 32px;
   }
   button {
@@ -193,11 +193,11 @@
       @media(max-width: 991px) {
         margin-bottom: 16px;
       }
-      h2{
+      h2 {
         line-height: 25px;
         font-size: 18px;
         font-weight: 500;
-        @media(max-width:991px){
+        @media(max-width: 991px) {
           font-size: 16px;
           line-height: 22px;
         }
@@ -234,7 +234,7 @@
         font-size: 30px;
         line-height: 33px;
 
-        + span{
+        + span {
           font-size: 14px;
           position: relative;
           top: 1px;
@@ -334,7 +334,7 @@
     transition: all .2s;
     margin-bottom: 18px;
     cursor: pointer;
-    @media(max-width:991px){
+    @media(max-width: 991px) {
       padding: 18px 16px 20px;
     }
     &:hover {
@@ -349,12 +349,12 @@
       @media(min-width: 992px) {
         width: 497px;
       }
-      h2{
+      h2 {
         line-height: 25px;
         font-weight: 500;
         margin-bottom: 4px;
         font-size: 18px;
-        @media(max-width:991px){
+        @media(max-width: 991px) {
           font-size: 16px;
           margin-bottom: 6px;
           line-height: 22px;
@@ -368,7 +368,7 @@
         margin-bottom: 0;
         display: flex;
         align-items: center;
-        .icon{
+        .icon {
           opacity: .5;
         }
         .secondary {
@@ -390,7 +390,7 @@
       font-size: 30px;
       font-weight: bold;
       line-height: 35px;
-      &.checking{
+      &.checking {
         line-height: 11px;
       }
       .checking {
@@ -1252,13 +1252,13 @@
       }
       .owl-dot {
         width: 16px;
-        &:hover{
-          span{
+        &:hover {
+          span {
             background-color: rgba(255, 255, 255, 0.5);
           }
         }
-        &.active{
-          span{
+        &.active {
+          span {
             background: $orange;
           }
         }
@@ -1501,7 +1501,7 @@
       background-position: bottom;
       background-size: 6px 1px;
       background-repeat: repeat-x;
-      @media(max-width:991px){
+      @media(max-width: 991px) {
         margin-left: -16px;
         margin-right: -16px;
         width: calc(100% + 32px);
@@ -1572,7 +1572,7 @@
         background-position: bottom;
         background-size: 6px 1px;
         background-repeat: repeat-x;
-        @media(max-width:991px){
+        @media(max-width: 991px) {
           margin-left: -16px;
           margin-right: -16px;
           width: calc(100% + 32px);
@@ -1631,7 +1631,7 @@
       background-position: bottom;
       background-size: 6px 1px;
       background-repeat: repeat-x;
-      @media(max-width:991px){
+      @media(max-width: 991px) {
         margin-left: -16px;
         margin-right: -16px;
         width: calc(100% + 32px);
@@ -1747,8 +1747,8 @@
   h1 {
     margin-bottom: 24px;
   }
-  .lesson-description{
-    .form-container{
+  .lesson-description {
+    .form-container {
       display: block;
     }
   }
@@ -1762,18 +1762,30 @@
       margin-bottom: 0;
     }
   }
-  .question-container {
-    .form-container {
-      margin-bottom: 24px;
-      &.tip {
-        &:last-of-type {
-          margin-bottom: 8px
-        }
+}
+.question-container {
+  border-top: 1px dotted rgba(37, 37, 37, 0.4);
+  padding-top: 24px;
+  @media(min-width: 991px){
+    margin-left: -32px;
+    margin-right: -32px;
+    padding-right: 32px;
+    padding-left: 32px;
+  }
+
+  &:last-of-type {
+    border-bottom: 1px dotted rgba(37, 37, 37, 0.4);
+  }
+  .form-container {
+    margin-bottom: 24px;
+    &.tip {
+      &:last-of-type {
+        margin-bottom: 8px
       }
     }
-    .add-tip {
-      font-size: 14px;
-      padding: 8px 4px 7px;
-    }
+  }
+  .add-tip {
+    font-size: 14px;
+    padding: 8px 4px 7px;
   }
 }
