--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -2,7 +2,7 @@
   width: 100%;
   margin-bottom: 22px;
   position: relative;
-  height: 69px;
+  //height: 69px;
   display: flex;
   flex-wrap: wrap;
   label {
@@ -12,6 +12,21 @@
     color: $black;
     margin-bottom: 4px;
     width: 100%;
+  }
+  .delete{
+    position: absolute;
+    right: 0;
+    top: 0;
+    line-height: 17px;
+    font-size: 14px;
+    color: #252525;
+    font-weight: 300;
+    opacity: 0.4;
+    cursor: pointer;
+    transition: all .2s;
+    &:hover{
+      opacity: .6;
+    }
   }
   input, textarea {
     height: 48px;
@@ -53,5 +68,59 @@
     line-height: 18px;
     color: #E20000;
     font-size: 13px;
+  }
+}
+
+.custom-radio{
+  margin-bottom: 12px;
+  input{
+    display: none;
+    + label{
+      padding-left: 22px;
+      position: relative;
+      &:before {
+        content:'';
+        position: absolute;
+        border: 2px solid #252525;
+        opacity: .3;
+        box-sizing: border-box;
+        width: 16px;
+        height: 16px;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        border-radius: 100%;
+        transition: all .2s;
+      }
+      &:after{
+        position: absolute;
+        content: '';
+        width: 6px;
+        height: 6px;
+        background-color: $orange;
+        opacity: 0;
+        left: 5px;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        border-radius: 100%;
+        transition: all .2s;
+      }
+    }
+    &:checked + label{
+      &:before{
+        border-color: $orange;
+        opacity: 1;
+      }
+      &:after{
+        opacity: 1;
+      }
+    }
+  }
+  label{
+    line-height: 17px;
+    font-size: 14px;
+    margin-bottom: 0;
   }
 }
