--- a/scss/_content-section.scss
+++ b/scss/_content-section.scss
@@ -1788,4 +1788,21 @@
     font-size: 14px;
     padding: 8px 4px 7px;
   }
+  .varitans-check{
+      display: flex;
+      align-items: center;
+    &__title{
+      font-style: normal;
+      font-weight: normal;
+      line-height: 16px;
+      height: 16px;
+      font-size: 14px;
+      margin-right: 16px;
+    }
+    .custom-radio{
+      margin-right: 21px;
+      margin-bottom: 0;
+    }
+  }
+
 }
